tests/dataset/tpc-h/compiler/c/q11.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T08:19:18Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T08:19:18Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _sum_float(list_float v) {
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int key;
  list_int items;
} _GroupInt;
typedef struct {
  int len;
  int cap;
  _GroupInt *data;
} list_group_int;
static list_group_int _group_by_int(list_int src) {
  list_group_int res;
  res.len = 0;
  res.cap = 0;
  res.data = NULL;
  for (int i = 0; i < src.len; i++) {
    int key = src.data[i];
    int idx = -1;
    for (int j = 0; j < res.len; j++)
      if (res.data[j].key == key) {
        idx = j;
        break;
      }
    if (idx == -1) {
      if (res.len >= res.cap) {
        res.cap = res.cap ? res.cap * 2 : 4;
        res.data = (_GroupInt *)realloc(res.data, sizeof(_GroupInt) * res.cap);
      }
      res.data[res.len].key = key;
      res.data[res.len].items = list_int_create(0);
      idx = res.len++;
    }
    _GroupInt *g = &res.data[idx];
    g->items.data =
        (int *)realloc(g->items.data, sizeof(int) * (g->items.len + 1));
    g->items.data[g->items.len++] = src.data[i];
  }
  return res;
}
static char *target_nation = "GERMANY";

typedef struct {
  int ps_partkey;
  double value;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ps_partkey;
  double value;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int n_nationkey;
  const char *n_name;
} nation_t;
typedef struct {
  int len;
  nation_t *data;
} nation_list_t;
nation_list_t create_nation_list(int len) {
  nation_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(nation_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int s_suppkey;
  int s_nationkey;
} supplier_t;
typedef struct {
  int len;
  supplier_t *data;
} supplier_list_t;
supplier_list_t create_supplier_list(int len) {
  supplier_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(supplier_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ps_partkey;
  int ps_suppkey;
  double ps_supplycost;
  int ps_availqty;
} partsupp_t;
typedef struct {
  int len;
  partsupp_t *data;
} partsupp_list_t;
partsupp_list_t create_partsupp_list(int len) {
  partsupp_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(partsupp_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ps_partkey;
  double value;
} filtered_item_t;
typedef struct {
  int len;
  filtered_item_t *data;
} filtered_item_list_t;
filtered_item_list_t create_filtered_item_list(int len) {
  filtered_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(filtered_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ps_partkey;
  double value;
} grouped_item_t;
typedef struct {
  int len;
  grouped_item_t *data;
} grouped_item_list_t;
grouped_item_list_t create_grouped_item_list(int len) {
  grouped_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(grouped_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_Q11_returns_high_value_partkeys_from_GERMANY_result;
static void test_Q11_returns_high_value_partkeys_from_GERMANY() {
  tmp1_t tmp1[] = {(tmp1_t){.ps_partkey = 1000, .value = 2000.0},
                   (tmp_item_t){.ps_partkey = 2000, .value = 50.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_Q11_returns_high_value_partkeys_from_GERMANY_result.len !=
      tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0;
         i3 < test_Q11_returns_high_value_partkeys_from_GERMANY_result.len;
         i3++) {
      if (test_Q11_returns_high_value_partkeys_from_GERMANY_result.data[i3] !=
          tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  nation_t nation[] = {(nation_t){.n_nationkey = 1, .n_name = "GERMANY"},
                       (nation_t){.n_nationkey = 2, .n_name = "FRANCE"}};
  int nation_len = sizeof(nation) / sizeof(nation[0]);
  supplier_t supplier[] = {(supplier_t){.s_suppkey = 100, .s_nationkey = 1},
                           (supplier_t){.s_suppkey = 200, .s_nationkey = 1},
                           (supplier_t){.s_suppkey = 300, .s_nationkey = 2}};
  int supplier_len = sizeof(supplier) / sizeof(supplier[0]);
  partsupp_t partsupp[] = {(partsupp_t){.ps_partkey = 1000,
                                        .ps_suppkey = 100,
                                        .ps_supplycost = 10.0,
                                        .ps_availqty = 100},
                           (partsupp_t){.ps_partkey = 1000,
                                        .ps_suppkey = 200,
                                        .ps_supplycost = 20.0,
                                        .ps_availqty = 50},
                           (partsupp_t){.ps_partkey = 2000,
                                        .ps_suppkey = 100,
                                        .ps_supplycost = 5.0,
                                        .ps_availqty = 10},
                           (partsupp_t){.ps_partkey = 3000,
                                        .ps_suppkey = 300,
                                        .ps_supplycost = 8.0,
                                        .ps_availqty = 500}};
  int partsupp_len = sizeof(partsupp) / sizeof(partsupp[0]);
  filtered_item_list_t tmp4 =
      filtered_item_list_t_create(partsupp.len * supplier.len * nation.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < partsupp_len; tmp6++) {
    partsupp_t ps = partsupp[tmp6];
    for (int tmp7 = 0; tmp7 < supplier_len; tmp7++) {
      supplier_t s = supplier[tmp7];
      if (!(s.s_suppkey == ps.ps_suppkey)) {
        continue;
      }
      for (int tmp8 = 0; tmp8 < nation_len; tmp8++) {
        nation_t n = nation[tmp8];
        if (!(n.n_nationkey == s.s_nationkey)) {
          continue;
        }
        if (!((strcmp(n.n_name, target_nation) == 0))) {
          continue;
        }
        tmp4.data[tmp5] =
            (filtered_item_t){.ps_partkey = ps.ps_partkey,
                              .value = ps.ps_supplycost * ps.ps_availqty};
        tmp5++;
      }
    }
  }
  tmp4.len = tmp5;
  filtered_item_list_t filtered = tmp4;
  filtered_item_list_t tmp9 = create_filtered_item_list(filtered.len);
  int tmp10_data[filtered.len];
  list_int tmp10 = {0, tmp10_data};
  int tmp11 = 0;
  for (int i12 = 0; i12 < filtered.len; i12++) {
    filtered_item_t x = filtered.data[i12];
    tmp9.data[tmp11] = x;
    tmp10.data[tmp11] = x.ps_partkey;
    tmp11++;
  }
  tmp9.len = tmp11;
  tmp10.len = tmp11;
  list_group_int tmp13 = _group_by_int(tmp10);
  grouped_item_list_t tmp14 = grouped_item_list_t_create(tmp13.len);
  int tmp15 = 0;
  for (int gi = 0; gi < tmp13.len; gi++) {
    _GroupInt _gp = tmp13.data[gi];
    filtered_item_list_t tmp16 = filtered_item_list_t_create(_gp.items.len);
    for (int i17 = 0; i17 < _gp.items.len; i17++) {
      tmp16.data[i17] = tmp9.data[_gp.items.data[i17]];
    }
    tmp16.len = _gp.items.len;
    struct {
      int key;
      filtered_item_list_t items;
    } g = {_gp.key, tmp16};
    list_float tmp18 = list_float_create(g.items.len);
    int tmp19 = 0;
    for (int i20 = 0; i20 < g.items.len; i20++) {
      filtered_item_t r = g.items.data[i20];
      tmp18.data[tmp19] = r.value;
      tmp19++;
    }
    tmp18.len = tmp19;
    tmp14.data[tmp15] =
        (grouped_item_t){.ps_partkey = g.key, .value = _sum_float(tmp18)};
    tmp15++;
  }
  tmp14.len = tmp15;
  grouped_item_list_t grouped = tmp14;
  list_float tmp21 = list_float_create(filtered.len);
  int tmp22 = 0;
  for (int tmp23 = 0; tmp23 < filtered.len; tmp23++) {
    filtered_item_t x = filtered.data[tmp23];
    tmp21.data[tmp22] = x.value;
    tmp22++;
  }
  tmp21.len = tmp22;
  double total = _sum_float(tmp21);
  double threshold = total * 0.0001;
  grouped_item_list_t tmp24 = grouped_item_list_t_create(grouped.len);
  double *tmp27 = (double *)malloc(sizeof(double) * grouped.len);
  int tmp25 = 0;
  for (int tmp26 = 0; tmp26 < grouped.len; tmp26++) {
    grouped_item_t x = grouped.data[tmp26];
    if (!(x.value > threshold)) {
      continue;
    }
    tmp24.data[tmp25] = x;
    tmp27[tmp25] = (-x.value);
    tmp25++;
  }
  tmp24.len = tmp25;
  for (int i30 = 0; i30 < tmp25 - 1; i30++) {
    for (int i31 = i30 + 1; i31 < tmp25; i31++) {
      if (tmp27[i30] > tmp27[i31]) {
        double tmp28 = tmp27[i30];
        tmp27[i30] = tmp27[i31];
        tmp27[i31] = tmp28;
        grouped_item_t tmp29 = tmp24.data[i30];
        tmp24.data[i30] = tmp24.data[i31];
        tmp24.data[i31] = tmp29;
      }
    }
  }
  grouped_item_list_t result = tmp24;
  printf("[");
  for (int i32 = 0; i32 < result.len; i32++) {
    if (i32 > 0)
      printf(",");
    grouped_item_t it = result.data[i32];
    printf("{");
    _json_string("ps_partkey");
    printf(":");
    _json_int(it.ps_partkey);
    printf(",");
    _json_string("value");
    printf(":");
    _json_float(it.value);
    printf("}");
  }
  printf("]");
  test_Q11_returns_high_value_partkeys_from_GERMANY_result = result;
  test_Q11_returns_high_value_partkeys_from_GERMANY();
  free(tmp21.data);
  free(result.data);
  return 0;
}
